next change to newFile.html

--- a/newFile.html
+++ b/newFile.html
@@ -9,5 +9,7 @@
 <body>
     <button>cilck here</button>
     <h1>don't click here</h1>
+    <h3>here we are trying to add third file</h3>
+    <button>search here</button>
 </body>
 </html>
