--- a/testingFile3.html
+++ b/testingFile3.html
@@ -9,7 +9,6 @@
 <body>
      <h1>this is third file </h1>
      <button>click here</button>
-    <h3>this is h3</h3>
-    <h4>this is another h4 that is adding inside of testingFile3.htlm</h4>
+     <h4>this is h4 tag for you.</h4>
 </body>
 </html>
