--- a/hexad.calculator.html
+++ b/hexad.calculator.html
@@ -56,7 +56,7 @@
     <script>
         
       function test(){
-         console.log(this);   
+         console.log("====>", this);   
       }
     </script>
 </body>
