--- a/hexad.calculator.html
+++ b/hexad.calculator.html
@@ -55,7 +55,7 @@
 
     <script>
         
-      function test(){
+      function test2(){
          console.log("====>", this);   
       }
     </script>
