--- a/hexad.calculator.html
+++ b/hexad.calculator.html
@@ -55,8 +55,8 @@
 
     <script>
         
-      function test(){
-         console.log("====>", this);   
+      function test7(){
+         console.log("====>5", this);   
       }
     </script>
 </body>
