--- a/hexad.calculator.html
+++ b/hexad.calculator.html
@@ -56,7 +56,7 @@
     <script>
         
       function test7(){
-         console.log("====>5", this);   
+         console.log("~~~~~ => ",window);   
       }
     </script>
 </body>
